{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "LandMap",
            "id": "4facb56b-3ee2-4408-983b-4ad48960a1cc",
            "actions": [
                {
                    "name": "LightAttack",
                    "type": "Button",
                    "id": "b2af32b6-9bc3-4343-b03e-3888678b9bb3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HeavyAttack",
                    "type": "Button",
                    "id": "b04c735f-a17f-49cd-8fba-5372b1c0a830",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Defend",
                    "type": "Button",
                    "id": "e266b11b-68d6-47da-a7c2-df79b15ca589",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dodge",
                    "type": "Button",
                    "id": "1f2d4699-3575-4a6a-bdab-36f8a7a9f745",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpecialAttack",
                    "type": "Button",
                    "id": "d08594b3-05e3-4ae0-aa9e-75bf24723775",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "31a2b603-b3f6-4792-9b45-edeb3be2d707",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LightAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "797bd1d5-d756-41e8-81b8-2fba49debe8d",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HeavyAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c002693-c68b-48bc-87e3-6f487783403b",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Defend",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a6697ede-3c37-4619-b039-2b68125b0e10",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dodge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6dc5898b-1594-4eb7-ac7c-34ac6aa1fb2a",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpecialAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}